<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/ip_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:hint="@string/ip_hint"
            android:singleLine="true"
            android:text="null.cse461." >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <EditText
        android:id="@+id/port_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port_number_hint"
        android:inputType="number"
        android:singleLine="true"
        android:text="46120" />

    <Button
        android:id="@+id/ping_b"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ping_button_text"
        android:onClick="onClick" />

    <TextView
        android:id="@+id/ping_result_tv0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ping_result"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/ip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_ip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="5dp" />
    
</LinearLayout>